--- a/qr.html
+++ b/qr.html
@@ -23,6 +23,11 @@
 <body>
 
     <center>
+        <p>
+            <a href="https://affping.com/to/bwgjms/post/how-to-buy-justmysocks/" target="_blank">
+                <img src="https://i.loli.net/2019/05/13/5cd917135db3a46106.jpg" alt="搬瓦工 Just My Socks">
+            </a>
+        </p>
         <textarea id="text" type="text" placeholder="请输入内容" rows="23.333" cols="23.333" autofocus></textarea>
         <p id="qrcode"></p>
     </center>
@@ -37,6 +42,19 @@
         $(function () {
 
             function qr(text) {
+                var options = {
+                    render: 'canvas',
+                    size: 300,
+                    ecLevel: 'Q',
+                    fill: '#233',
+                    background: null,
+                    text: text,
+                    label: '233 Blog',
+                    fontname: 'sans',
+                    fontcolor: '#233',
+                    quiet: 0,
+                    mode: 2
+                };
                 $("#qrcode").empty().qrcode(options);
             }
 
